fix: filters z-index issue

--- a/admin/frontend/src/pages/search/components/FilterAccordion.scss
+++ b/admin/frontend/src/pages/search/components/FilterAccordion.scss
@@ -2,6 +2,8 @@
 
 .filters {
   &__collapse {
+    position: relative;
+    z-index: 0;
     display: grid;
     grid-template-rows: 0fr;
     opacity: 0;
@@ -16,6 +18,7 @@
     grid-template-rows: 1fr;
     opacity: 1;
     transform: translateY(0);
+    z-index: 2;
 
     .filters__content {
       overflow: visible;
